--- a/sass/components/ImagePad.scss
+++ b/sass/components/ImagePad.scss
@@ -5,8 +5,7 @@
     display: inline-flex;
     flex-direction: row;
     align-items: flex-end;
-    opacity: 0;
-    transition: background-color 0.25s, color 0.25s, opacity 0.5s;
+    transition: background-color 0.25s, color 0.25s;
     background-size: cover;
     text-decoration: none;
 
@@ -20,3 +19,10 @@
         text-align: center;
     }        
 }    
+.image-pad-appear {
+    opacity: 0;
+    &.image-pad-appear-active {
+        opacity: 1;
+        transition: opacity 0.5s;
+    }
+}
