Changed min-device-width to min-width, avoids problems on orientation change on android devices

--- a/sass/components/GameBoard.scss
+++ b/sass/components/GameBoard.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: stretch;
 
-    @media all and (min-device-width: $minDeviceWidth) and (orientation: landscape){
+    @media all and (min-width: $minDeviceWidth) and (orientation: landscape){
         flex-direction: row;
     }
 
@@ -12,7 +12,7 @@
         flex-grow: 1;
         display: inline-flex;
         border-bottom: none;
-        @media all and (min-device-width: $minDeviceWidth) and (orientation: landscape){
+        @media all and (min-width: $minDeviceWidth) and (orientation: landscape){
             border-right: none;
             border-bottom: 1px solid #888;
         }
@@ -20,7 +20,7 @@
 
     .letter-pad-container {
         display: inline-flex;
-        @media all and (min-device-width: $minDeviceWidth) and (orientation: landscape){
+        @media all and (min-width: $minDeviceWidth) and (orientation: landscape){
             width: 40vw;
             min-width: 30vw;
         }
