--- a/sass/components/LetterPad.scss
+++ b/sass/components/LetterPad.scss
@@ -1,16 +1,23 @@
 .letter-pad {
-    width: 5vw;
-    height: 5vw;
+    width: 8vw;
+    height: 8vw;
+    line-height: 8vw;
     border: 2px solid black;
     border-radius: 100%;
     text-decoration: none;
     display: inline-block;
-    line-height: 5vw;
     text-align: center;
     vertical-align: middle;
     transition: background-color 0.25s, color 0.25s;
     box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
     text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+
+    @media all and (min-device-width: $minDeviceWidth) and (orientation: landscape){
+        width: 5vw;
+        height: 5vw;
+        line-height: 5vw;
+    }
+
 }
 
 .letter-pad-appear {
